# Dining_philosophers

./: .gitignore  CMakeLists.txt  README.md
res/: res.qrc
src/: MainWindow.cpp  MainWindow.h  main.cpp  mainwindow.cpp
src/controller/: PhilosopherController.cpp  PhilosopherController.h  PhilosopherMindController.cpp  PhilosopherMindController.h
src/layout/: FlowLayout.cpp  FlowLayout.h
src/model/: ForkPair.cpp  ForkPair.h  Philosopher.cpp  Philosopher.h
ui/: MainWindow.ui  philosopherView.ui
